--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(tgbot-cpp CONFIG REQUIRED)
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
+find_package(fmt CONFIG REQUIRED)
 
 add_executable(tg_bot_electronic_library main.cpp)
 
 target_link_libraries(tg_bot_electronic_library PRIVATE TgBot
         ws2_32
-        unofficial::sqlite3::sqlite3)
+        unofficial::sqlite3::sqlite3
+        fmt::fmt)
