--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ find_package(CURL CONFIG REQUIRED)
 set(YANDEXDISK_INCLUDE_DIR "" CACHE PATH "Path to YandexDiskClient headers")
 set(YANDEXDISK_LIB_DIR "" CACHE PATH "Path to YandexDiskClient library directory")
 
-add_executable(tg_bot_electronic_library main.cpp)
+add_executable(tg_bot_electronic_library main.cpp
+        Command.h)
 
 if(YANDEXDISK_INCLUDE_DIR)
     target_include_directories(tg_bot_electronic_library PRIVATE "${YANDEXDISK_INCLUDE_DIR}")
