Added the ability to conveniently implement new commands. To create a new command, you need to create a header-only class following the example of StartCommand. The new command must also be added to the commandRegistry dictionary inside the registerCommands() function.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ set(YANDEXDISK_INCLUDE_DIR "" CACHE PATH "Path to YandexDiskClient headers")
 set(YANDEXDISK_LIB_DIR "" CACHE PATH "Path to YandexDiskClient library directory")
 
 add_executable(tg_bot_electronic_library main.cpp
-        Command.h)
+        ICommand.h
+        StartCommand.h)
 
 if(YANDEXDISK_INCLUDE_DIR)
     target_include_directories(tg_bot_electronic_library PRIVATE "${YANDEXDISK_INCLUDE_DIR}")
