Added function of search by title

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ add_executable(tg_bot_electronic_library main.cpp
         ICommand.h
         StartCommand.h
         CatalogCommand.h
-        FindCommand.h)
+        FindCommand.h
+        FindByTitleCommand.h)
 
 if(YANDEXDISK_INCLUDE_DIR)
     target_include_directories(tg_bot_electronic_library PRIVATE "${YANDEXDISK_INCLUDE_DIR}")
