Refactor command handling: introduced SessionCommand base class and removed regex validation
- Added new abstract base class `SessionCommand<T>` that manages user sessions (maps userId -> session state).
  * Simplifies handling of interactive, multi-step commands.
  * Commands like FindCommand and FindByTitleCommand now just override `handleSessionMessage`.

- Updated `FindCommand` and `FindByTitleCommand`:
  * Removed strict regex validation for book titles/authors that caused false negatives with Unicode/Unicode-like characters.
  * Replaced validation logic with simple trimming + empty check (any non-empty string is now accepted).
  * This makes user input much more reliable and avoids rejecting valid titles like "Гарри Поттер и философский камень".

- Updated `main.cpp`:
  * Unified message handling through `ICommand::handleMessage`, so all commands are polled for active sessions in `onAnyMessage`.
  * Removed manual `dynamic_cast` checks for each interactive command.

✅ Result:
  * Interactive commands (find, find_by_title) now work correctly and reliably.
  * Codebase more extensible — new interactive commands can be added easily by subclassing `SessionCommand`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ add_executable(tg_bot_electronic_library main.cpp
         StartCommand.h
         CatalogCommand.h
         FindCommand.h
-        FindByTitleCommand.h)
+        FindByTitleCommand.h
+        SessionCommand.h)
 
 if(YANDEXDISK_INCLUDE_DIR)
     target_include_directories(tg_bot_electronic_library PRIVATE "${YANDEXDISK_INCLUDE_DIR}")
