The book search commands by topic and author are implemented by analogy with the already implemented commands

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,9 @@ add_executable(tg_bot_electronic_library main.cpp
         CatalogCommand.h
         FindCommand.h
         FindByTitleCommand.h
-        SessionCommand.h)
+        SessionCommand.h
+        FindByAuthorCommand.h
+        FindByTopicCommand.h)
 
 if(YANDEXDISK_INCLUDE_DIR)
     target_include_directories(tg_bot_electronic_library PRIVATE "${YANDEXDISK_INCLUDE_DIR}")
