refactor: unify and improve book search commands
Refactored FindCommand to use SQL LIKE with wildcards for partial matching author and title, improving search flexibility.

Extracted common input trimming and safe message deletion logic in FindCommand for cleaner code and reuse.

Introduced a new generic template base class FindByFieldCommand for single-field searches (author, title, topic), eliminating duplicated code.

Rewrote FindByAuthorCommand, FindByTitleCommand, and FindByTopicCommand as lightweight derived classes from the generic base, specifying only search field and prompts.

Adjusted SQL queries across all search commands to remove case-insensitive LOWER() due to SQLite Unicode limitations, relying on substring matching with wildcards.

Updated main registration to include new and refactored commands consistently.

These changes simplify maintenance, improve user search experience with partial matches, and prepare for easier extension in future

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,8 @@ add_executable(tg_bot_electronic_library main.cpp
         FindByTitleCommand.h
         SessionCommand.h
         FindByAuthorCommand.h
-        FindByTopicCommand.h)
+        FindByTopicCommand.h
+        FindByFieldCommand.h)
 
 if(YANDEXDISK_INCLUDE_DIR)
     target_include_directories(tg_bot_electronic_library PRIVATE "${YANDEXDISK_INCLUDE_DIR}")
