feat: Implement BookListPaginator class with pagination, Yandex Disk file download, and inline keyboard support
- Added BookListPaginator to manage book listings with SQLite queries and pagination
- Implemented inline keyboard for book navigation and download actions
- Integrated YandexDiskClient for downloading files before sending to users
- Handled callback queries with safe error handling and message deletion after download
- Added checks to avoid re-downloading files if already present locally
- Enhanced error logging with book title and author details for easier debugging
- Improved user messages for empty search results and error scenarios

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ add_executable(tg_bot_electronic_library main.cpp
         SessionCommand.h
         FindByAuthorCommand.h
         FindByTopicCommand.h
-        FindByFieldCommand.h)
+        FindByFieldCommand.h
+        BookListPaginator.h)
 
 if(YANDEXDISK_INCLUDE_DIR)
     target_include_directories(tg_bot_electronic_library PRIVATE "${YANDEXDISK_INCLUDE_DIR}")
