--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,17 +11,17 @@ find_package(CURL CONFIG REQUIRED)
 set(YANDEXDISK_INCLUDE_DIR "" CACHE PATH "Path to YandexDiskClient headers")
 set(YANDEXDISK_LIB_DIR "" CACHE PATH "Path to YandexDiskClient library directory")
 
-add_executable(tg_bot_electronic_library main.cpp
-        ICommand.h
-        StartCommand.h
-        CatalogCommand.h
-        FindCommand.h
-        FindByTitleCommand.h
-        SessionCommand.h
-        FindByAuthorCommand.h
-        FindByTopicCommand.h
-        FindByFieldCommand.h
-        BookListPaginator.h)
+add_executable(tg_bot_electronic_library src/main.cpp
+        include/ICommand.h
+        include/StartCommand.h
+        include/CatalogCommand.h
+        include/FindCommand.h
+        include/FindByTitleCommand.h
+        include/SessionCommand.h
+        include/FindByAuthorCommand.h
+        include/FindByTopicCommand.h
+        include/FindByFieldCommand.h
+        include/BookListPaginator.h)
 
 if(YANDEXDISK_INCLUDE_DIR)
     target_include_directories(tg_bot_electronic_library PRIVATE "${YANDEXDISK_INCLUDE_DIR}")
